--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,6 @@ jobs:
       - name: Run test suite
         run: |
           pipenv run pytest
+      - name: Run test suite coverage
+        run: |
+          pipenv run pytest --cov=app
